Namespace changes. Reinstated tests.

--- a/Slouch/Views/Index.cshtml
+++ b/Slouch/Views/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Slouch.Core.IndexModel>
+﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Slouch.IndexModel>
 
 @{
     Layout = "Shared/_Layout.cshtml";   
